Add repo to package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   ],
   "author": "Jon Casey (https://github.com/joncasey)",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joncasey/google-fonts"
+  },
   "keywords": [
     "download",
     "font",
